cluster/media/navidrome.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: werethemille.rs
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - music.werethemille.rs
      secretName: music-tls
  rules:
    - host: music.werethemille.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
